add devices and local_device_owner parameter di v2 selectables
