# docs/devicemanager_swagger.yaml
@@ -173,6 +173,10 @@ definitions:
         items:
           $ref: '#/definitions/devicemodel.FilterCriteria'
         type: array
+      devices:
+        items:
+          type: string
+        type: array
       filter_by_device_attribute_keys:
         items:
           type: string
@@ -189,6 +193,8 @@ definitions:
         type: boolean
       include_imports:
         type: boolean
+      local_device_owner:
+        type: string
       local_devices:
         items:
           type: string
@@ -759,10 +765,20 @@ paths:
         in: query
         name: import_path_trim_first_element
         type: boolean
+      - description: comma seperated list of device ids; result devices must be in
+          this list (if one is given)
+        in: query
+        name: devices
+        type: string
       - description: comma seperated list of local device ids; result devices must
           be in this list (if one is given)
         in: query
         name: local_devices
+        type: string
+      - description: used in combination with local_devices to identify devices, default
+          is the requesting user
+        in: query
+        name: local_device_owner
         type: string
       - description: comma seperated list of attribute keys; result devices have these
           attributes (if one is given)
@@ -828,10 +844,20 @@ paths:
         in: query
         name: import_path_trim_first_element
         type: boolean
+      - description: comma seperated list of device ids; result devices must be in
+          this list (if one is given)
+        in: query
+        name: devices
+        type: string
       - description: comma seperated list of local device ids; result devices must
           be in this list (if one is given)
         in: query
         name: local_devices
+        type: string
+      - description: used in combination with local_devices to identify devices, default
+          is the requesting user
+        in: query
+        name: local_device_owner
         type: string
       - description: json encoded criteria list (model.FilterCriteriaAndSet like [{&quot;interaction&quot;:&quot;&quot;,&quot;function_id&quot;:&quot;&quot;,&quot;aspect_id&quot;:&quot;&quot;,&quot;device_class_id&quot;:&quot;&quot;}])
         in: query
